Correção no collision do personagem cadeirante

--- a/engine.cfg
+++ b/engine.cfg
@@ -8,3 +8,10 @@ icon="icon.png"
 
 width=1024
 height=768
+
+[input]
+
+cima=[key(Up)]
+baixo=[key(Down)]
+direita=[key(Right)]
+esquerda=[key(Left)]
