inserida tela de selecao de personagem simples (incompleto)

--- a/engine.cfg
+++ b/engine.cfg
@@ -1,7 +1,7 @@
 [application]
 
 name="SanjaRunner"
-main_scene="res://scenes/main_scene.scn"
+main_scene="res://scenes/selectPlayer.scn"
 icon="icon.png"
 
 [display]
@@ -16,3 +16,7 @@ cima=[key(Up)]
 baixo=[key(Down)]
 direita=[key(Right)]
 esquerda=[key(Left)]
+
+[render]
+
+default_clear_color=#ffa1bded
