Implementacao do spawn do personagem (incompleto)

--- a/engine.cfg
+++ b/engine.cfg
@@ -4,6 +4,10 @@ name="SanjaRunner"
 main_scene="res://scenes/selectPlayer.scn"
 icon="icon.png"
 
+[autoload]
+
+globals="*res://scripts/globals.gd"
+
 [display]
 
 stretch_mode="2d"
