Seleção de personagem funcional, parallax background como cena, tamanho dos personagens ajustados

--- a/engine.cfg
+++ b/engine.cfg
@@ -10,10 +10,14 @@ globals="*res://scripts/globals.gd"
 
 [display]
 
-stretch_mode="2d"
+fullscreen=true
+use_2d_pixel_snap=false
+keep_screen_on=true
+orientation="sensor_landscape"
 stretch_aspect="keep"
-width=1024
+stretch_mode="2d"
 height=768
+width=1024
 
 [input]
 
