Aprimoramento da tela inicial

--- a/engine.cfg
+++ b/engine.cfg
@@ -1,7 +1,7 @@
 [application]
 
 name="SanjaRunner"
-main_scene="res://scenes/selectPlayer.scn"
+main_scene="res://scenes/Cena0_abertura.scn"
 icon="icon.png"
 
 [autoload]
@@ -10,7 +10,7 @@ globals="*res://scripts/globals.gd"
 
 [display]
 
-fullscreen=true
+fullscreen=false
 use_2d_pixel_snap=false
 keep_screen_on=true
 orientation="sensor_landscape"
