--- a/engine.cfg
+++ b/engine.cfg
@@ -1,7 +1,7 @@
 [application]
 
 name="SanjaRunner"
-main_scene="res://scenes/Cena0_abertura.scn"
+main_scene="res://scenes/main_scene.scn"
 icon="icon.png"
 
 [autoload]
