--- a/engine.cfg
+++ b/engine.cfg
@@ -21,7 +21,7 @@ width=1024
 
 [input]
 
-clique_esquerdo=[mbutton(0, 1)]
+cliqueEsquerdo=[mbutton(0, 1)]
 cima=[key(Up)]
 baixo=[key(Down)]
 direita=[key(Right)]
