Alterações na jogabilidade

--- a/engine.cfg
+++ b/engine.cfg
@@ -10,6 +10,7 @@ globals="*res://scripts/globals.gd"
 
 [display]
 
+emulate_touchscreen=true
 fullscreen=false
 use_2d_pixel_snap=false
 keep_screen_on=true
