--- a/engine.cfg
+++ b/engine.cfg
@@ -1,7 +1,7 @@
 [application]
 
 name="SanjaRunner"
-main_scene="res://scenes/main_scene.scn"
+main_scene="res://scenes/main_scene.xml"
 icon="icon.png"
 
 [autoload]
@@ -10,6 +10,7 @@ globals="*res://scripts/globals.gd"
 
 [display]
 
+emulate_touchscreen=true
 fullscreen=false
 use_2d_pixel_snap=false
 keep_screen_on=true
