Adicionado as moedas coletaveis com som, sistema de pontuacao e engrenagens

--- a/engine.cfg
+++ b/engine.cfg
@@ -1,11 +1,13 @@
 [application]
 
 name="SanjaRunner"
-main_scene="res://scenes/main_scene.xml"
+main_scene="res://scenes/splashscreen/splashcreen0.xml"
+target_fps=60
 icon="icon.png"
 
 [autoload]
 
+transition="*res://scenes/splashscreen/transition.xml"
 globals="*res://scripts/globals.gd"
 
 [display]
