--- a/engine.cfg
+++ b/engine.cfg
@@ -1,7 +1,7 @@
 [application]
 
 name="SanjaRunner"
-main_scene="res://scenes/main_scene.xml"
+main_scene="res://scenes/Cena0_abertura.xml"
 target_fps=60
 icon="icon.png"
 
