Implementação incompleta da tela de quiz

--- a/engine.cfg
+++ b/engine.cfg
@@ -5,6 +5,10 @@ main_scene="res://scenes/splashscreen/splashcreen0.xml"
 target_fps=60
 icon="icon.png"
 
+[audio]
+
+driver="ALSA"
+
 [autoload]
 
 transition="*res://scenes/splashscreen/transition.xml"
