Implementação da seleção de mapa

--- a/engine.cfg
+++ b/engine.cfg
@@ -1,7 +1,8 @@
 [application]
 
 name="SanjaRunner"
-main_scene="res://scenes/main_scene.xml"
+main_scene="res://scenes/selectPlayer.xml"
+auto_accept_quit=false
 target_fps=60
 icon="icon.png"
 
@@ -10,8 +11,14 @@ icon="icon.png"
 data="*res://scripts/data.gd"
 globals="*res://scripts/globals.gd"
 
+[debug]
+
+target_fps=60
+
 [display]
 
+driver="GLES2"
+resizable=true
 emulate_touchscreen=true
 fullscreen=false
 use_2d_pixel_snap=false
