--- a/engine.cfg
+++ b/engine.cfg
@@ -1,17 +1,20 @@
 [application]
 
 name="SanjaRunner"
-main_scene="res://scenes/main_scene.xml"
+main_scene="res://scenes/splashscreen/splashcreen0.xml"
 target_fps=60
 icon="icon.png"
 
 [autoload]
 
+transition="*res://scenes/splashscreen/transition.xml"
 data="*res://scripts/data.gd"
 globals="*res://scripts/globals.gd"
 
 [display]
 
+width=1280
+height=768
 emulate_touchscreen=true
 fullscreen=false
 use_2d_pixel_snap=false
@@ -19,8 +22,6 @@ keep_screen_on=true
 orientation="sensor_landscape"
 stretch_aspect="keep"
 stretch_mode="2d"
-height=768
-width=1024
 
 [input]
 
