Pássaros, botão invisível, pontuação da tela inicial se ajusta, sprites de personagem atualizados, junção do script globals ao data

--- a/engine.cfg
+++ b/engine.cfg
@@ -1,15 +1,13 @@
 [application]
 
 name="SanjaRunner"
-main_scene="res://scenes/selectPlayer.xml"
+main_scene="res://scenes/Cena0_abertura.xml"
 auto_accept_quit=false
-target_fps=60
 icon="icon.png"
 
 [autoload]
 
 data="*res://scripts/data.gd"
-globals="*res://scripts/globals.gd"
 
 [debug]
 
@@ -17,17 +15,17 @@ target_fps=60
 
 [display]
 
+width=1280
+height=768
+fullscreen=false
 driver="GLES2"
 resizable=true
 emulate_touchscreen=true
-fullscreen=false
 use_2d_pixel_snap=false
 keep_screen_on=true
 orientation="sensor_landscape"
 stretch_aspect="keep"
 stretch_mode="2d"
-height=768
-width=1024
 
 [input]
 
@@ -36,6 +34,10 @@ cima=[key(Up)]
 baixo=[key(Down)]
 direita=[key(Right)]
 esquerda=[key(Left)]
+
+[rasterizer.Android]
+
+name="SanjaRunner"
 
 [render]
 
